# rsproject

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  TaskList.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/examples/: big_project.rs  create_project.rs  main_demo.rs  recursion_test.rs  test_uuid.rs
app/src/: app.rs  lib.rs  main.rs  tabs.rs
app/src/app/: app_impl.rs  dialogs.rs  state.rs  theme.rs  ui.rs  views.rs
app/src/app/dialogs/: assign_resource.rs  close_project.rs  edit_project.rs  new_project.rs  new_resource.rs  new_task.rs  task_details.rs  unavailable_period.rs
app/src/app/handlers/: project.rs  resource.rs  task.rs
app/src/app/ui/: central_panel.rs  side_panel.rs  top_panel.rs
app/src/app/views/: gantt.rs  project.rs  resources.rs  task.rs
app/src/tabs/: gantt.rs  project.rs  resources.rs  task.rs
logic/: Cargo.toml
logic/src/: base_structures.rs  cust_exceptions.rs  lib.rs  services.rs
logic/src/base_structures/: dependecies.rs  dependencies.rs  project.rs  project_calendar.rs  project_containers.rs  resource.rs  resource_pool.rs  tasks.rs  time_window.rs  traits.rs
logic/src/services/: resource_service.rs  scheduler.rs  task_service.rs
logic/tests/: integration.rs
