[package]
name = "app"
version = "0.1.0"
edition = "2024"


[dependencies]
logic = {path = "../logic"}
serde = {workspace = true}
serde_json = {workspace = true}
anyhow = {workspace = true}
thiserror = {workspace = true}
chrono = {workspace = true}
uuid = {version = "1.20.0", features = ["v4", "serde"]}
eframe = { version = "0.33.3", features = ["default_fonts", "glow"] }
egui_extras = {version = "0.33.3", features = ["datepicker"]}